--- a/artistry.html
+++ b/artistry.html
@@ -98,7 +98,7 @@
   <!--Nav strip-->
   <nav style="background-color: #111; padding: 1rem; text-align: center;">
     <a href="index.html" style="color: white; text-decoration: none; margin: 0 1rem;">Home</a>
-    <a href="resume.html" style="color: white; text-decoration: none; margin: 0 1rem;">Resume</a>
+    <a href="Resume.html" style="color: white; text-decoration: none; margin: 0 1rem;">Resume</a>
     <a href="technology.html" style="color: white; text-decoration: none; margin: 0 1rem;">Tech Projects</a>
     <a href="Contact.html" style="color: white; text-decoration: none; margin: 0 1rem;">Contact</a>
   </nav>
