--- a/Resume.html
+++ b/Resume.html
@@ -120,20 +120,19 @@
       border-radius: 5px;
     }
 
-   .profile-pic {
-  width: 250px;
+    .profile-pic {
+  width: 15.625rem;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 50%;
-  border: 5px solid rgb(28, 20, 20);
+  border: 0.3125rem solid rgb(28, 20, 20);
   position: absolute;
-  top: 30px;
-  left: 20px;
+  top: 1.875rem;
+  left: 1.25rem;
   opacity: 0;
   z-index: 10;
   animation: fadeIn 2s ease-in-out forwards;
 }
-
 
     .name-line {
       position: absolute;
