--- a/Resume.html
+++ b/Resume.html
@@ -235,7 +235,7 @@
 }
 
 
-    }
+    
   </style>
 </head>
 <body>
@@ -268,7 +268,7 @@
 
     <div id="about" class="section">
       <h2>About Me</h2>
-      <p>I'm an entry-level IT professional with a strong foundation in cloud computing, networking, and database management - along with a background in operations, administration, and customer service. I bring a process-focused mindset, a people-first perspective, and a drive to learn and grow professionally.</p>
+      <p>I'm an entry-level IT professional with a strong foundation in cloud computing, networking, and database management - along with a background in operations, administration, and customer service. I bring a process-focused mindset, a people-first perspective, and a drive to learn, and grow professionally.</p>
     </div>
 
 
