--- a/artistry.html
+++ b/artistry.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Water+Brush&display=swap" rel="stylesheet"> <!-- imports the font so the browser can use it -->
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Artistry Gallery</title>
@@ -23,7 +26,7 @@
       text-align: center;
       background-color: #d2d2d2;
       color: #000;
-      font-size: 4rem;
+      font-size: 3rem;
       font-weight: bold;
       font-family:Arial, Helvetica, sans-serif; /*This font sucks, find something else that looks like a brush stroke*/
     }
@@ -92,6 +95,37 @@
       max-height: 90vh;
       border-radius: 8px;
     }
+
+    .art-header {
+  background-color: #ccc;
+  padding: 2rem 0;
+  text-align: center;
+  border-top: 2px solid #010002;
+  border-bottom: 2px solid #222;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+
+.water-brush-regular {
+  font-family: "Water Brush", cursive;
+  font-size: 4rem;               /* tweak as needed */
+  margin: 0;                     /* removes default <p> spacing */
+  animation: fadeInUp 3s ease-out;
+}
+
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
   </style>
 </head>
 <body>
@@ -103,9 +137,11 @@
     <a href="Contact.html" style="color: white; text-decoration: none; margin: 0 1rem;">Contact</a>
   </nav>
 
-  <header>
-    <p>Art Projects</p>
-  </header>
+<header class="art-header">
+  <p class="water-brush-regular">Art Projects</p>
+</header>
+
+
 
 <!--Drop Down Filters-->
   <div class="filters">
