--- a/Resume.html
+++ b/Resume.html
@@ -259,7 +259,7 @@
     <nav>
   <div class="nav-links">
     <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
+    <a href="artistry.html">Art Projects</a>
     <a href="technology.html">Tech Projects</a>
     <a href="contact.html">Contact</a>
   </div>
