--- a/technology.html
+++ b/technology.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-  <title>Sarah Knipp | Tech Portfolio</title>
+  <title>Sarah Knipp | Tech Project Portfolio</title>
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
