--- a/artistry.html
+++ b/artistry.html
@@ -219,6 +219,13 @@
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/posiden.jpg" alt="Poseidon" onclick="openLightbox(this.src)" />
       <div class="caption">Poseidon • Acrylic on Masonite • 2019</div>
     </div>
+   <div class="gallery-item" data-medium="acrylic" data-date="2019">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/7.jpg" alt="Covid" onclick="openLightbox(this.src)" />
+      <div class="caption">Covid• Pencil on Paper • 2019</div>
+    </div>
+
+
+
   </div>
 
   <div class="lightbox" id="lightbox" onclick="this.style.display='none'">
