--- a/artistry.html
+++ b/artistry.html
@@ -168,6 +168,7 @@
       <option value="2015">2023</option>
       <option value="2015">2024</option>
       <option value="2024">2025</option>
+      <option value="Unknown">Unknown</option>
     </select>
   </div>
 
@@ -223,8 +224,38 @@
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/7.jpg" alt="Covid" onclick="openLightbox(this.src)" />
       <div class="caption">Covid• Pencil on Paper • 2019</div>
     </div>
-
-
+ <div class="gallery-item" data-medium="pencil" data-date="2019">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/markmaking finish.JPG" alt="StillLife" onclick="openLightbox(this.src)" />
+      <div class="caption">Still Life • Pencil on Paper • 2019</div>
+    </div>
+ <div class="gallery-item" data-medium="Floral" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/handwreath.jpg" alt="HandWreath" onclick="openLightbox(this.src)" />
+      <div class="caption">Floral</div>
+    </div>
+ <div class="gallery-item" data-medium="Acrylic" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/seawench.jpg" alt=" SeaWitch" onclick="openLightbox(this.src)" />
+      <div class="caption">Sea Witch • Arylic on Masonite • Unknown</div>
+    </div>
+ <div class="gallery-item" data-medium="Acrylic" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/selfpor1.jpg" alt="Self Portrait" onclick="openLightbox(this.src)" />
+      <div class="caption">Self Portrait • Acrylic • Unknown</div>
+    </div>
+ <div class="gallery-item" data-medium="Acrylic" data-date="2017">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/ship1.jpg" alt="StillLife" onclick="openLightbox(this.src)" />
+      <div class="caption">The Kraken • Acrylic on Masonite • 2017</div>
+    </div>
+     <div class="gallery-item" data-medium="Charcoal" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/skellydoodle.png" alt="Skelly Doodle" onclick="openLightbox(this.src)" />
+      <div class="caption">Skelly Tutorial • Charcoal and Chalk • Unknown</div>
+    </div>
+         <div class="gallery-item" data-medium="Acrylic" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/startrek.jpg" alt="StarTrek" onclick="openLightbox(this.src)" />
+      <div class="caption">Star Trek • Acrylic on Masonite • Unknown</div>
+    </div>
+     <div class="gallery-item" data-medium="Photography" data-date="Unknown">
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/unicup.jpg" alt="Universe in a Cup" onclick="openLightbox(this.src)" />
+      <div class="caption">Universe in a Cup • Photography • Unknown</div>
+    </div>
 
   </div>
 
