--- a/artistry.html
+++ b/artistry.html
@@ -148,9 +148,14 @@
     <label for="mediumFilter">Medium:</label>
     <select id="mediumFilter">
       <option value="">All</option>
-      <option value="mixed-media">Mixed Media</option>
-      <option value="acrylic">Acrylic</option>
-      <option value="faux-stained-glass">Faux Stained Glass</option>
+      <option value="Mixed-Media">Mixed Media</option>
+      <option value="Acrylic">Acrylic</option>
+      <option value="Faux-Stained-Glass">Faux Stained Glass</option>
+      <option value="Charcoal">Charcoal</option>
+      <option value="Pencil">Pencil</option>
+      <option value="Floral">Floral</option>
+      <option value="Photography">Photography</option>
+
     </select>
 
     <label for="dateFilter">Date:</label>
@@ -176,55 +181,55 @@
 
   <!--Gallery Items Copy and Paste to add Additional-->
 
-    <div class="gallery-item" data-medium="mixed-media" data-date="2024">
+    <div class="gallery-item" data-medium="Mixed-Media" data-date="2024">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/apoth.jpg" alt="Apothecary Painting" onclick="openLightbox(this.src)" />
       <div class="caption">Apothecary Painting • Mixed Media • 2024</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2017">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2017">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/dad.jpg" alt="Dad" onclick="openLightbox(this.src)" />
       <div class="caption">Dad • Acrylic on Masonite • 2017</div>
     </div>
-    <div class="gallery-item" data-medium="faux-stained-glass" data-date="2020">
+    <div class="gallery-item" data-medium="Faux-Stained-Glass" data-date="2020">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/brwindow.jpg" alt="Raven Faux Stained Glass Window" onclick="openLightbox(this.src)" />
       <div class="caption">Raven Window • Faux Stained Glass • 2020</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2015">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2015">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/deer.jpg" alt="Deer" onclick="openLightbox(this.src)" />
       <div class="caption">Deer Painting • Acrylic • 2015</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2018">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2018">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/diablopainting.JPG" alt="Diablo" onclick="openLightbox(this.src)" />
       <div class="caption">Diablo • Acrylic on Masonite • 2018</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2019">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/dryad.jpg" alt="Dryad" onclick="openLightbox(this.src)" />
       <div class="caption">Dryad • Acrylic on Masonite • 2019</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2014">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2014">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/form.jpeg" alt="Form Study" onclick="openLightbox(this.src)" />
       <div class="caption">Form Study • Acrylic on Masonite • 2014</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2014">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2014">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/gardner.jpg" alt="The Gardner" onclick="openLightbox(this.src)" />
       <div class="caption">The Gardner • Acrylic on Masonite • 2014</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2019">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/kilchurn.jpg" alt="Kilchurn Castle" onclick="openLightbox(this.src)" />
       <div class="caption">Kilchurn Castle • Acrylic on Masonite • 2019</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2019">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/medusa.jpg" alt="Medusa" onclick="openLightbox(this.src)" />
       <div class="caption">Medusa • Acrylic on Masonite • 2019</div>
     </div>
-    <div class="gallery-item" data-medium="acrylic" data-date="2019">
+    <div class="gallery-item" data-medium="Acrylic" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/posiden.jpg" alt="Poseidon" onclick="openLightbox(this.src)" />
       <div class="caption">Poseidon • Acrylic on Masonite • 2019</div>
     </div>
-   <div class="gallery-item" data-medium="acrylic" data-date="2019">
+   <div class="gallery-item" data-medium="Acrylic" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/7.jpg" alt="Covid" onclick="openLightbox(this.src)" />
       <div class="caption">Covid• Pencil on Paper • 2019</div>
     </div>
- <div class="gallery-item" data-medium="pencil" data-date="2019">
+ <div class="gallery-item" data-medium="Pencil" data-date="2019">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/markmaking finish.JPG" alt="StillLife" onclick="openLightbox(this.src)" />
       <div class="caption">Still Life • Pencil on Paper • 2019</div>
     </div>
